--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,44 @@
-.App {
-  text-align: center;
+.app-header {
+    text-align: center;
+    font-size: 2vw;
+    font-family: "Segoe UI", Arial, sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+textarea {
+    resize: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.app-container {
+    height: 100%;
+    width: 100%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.component-container {
+    display: flex;
+    flex-direction: row;
+    height: 100%;
+    width: 100%;
 }
 
-.App-link {
-  color: #61dafb;
+.child-container {
+    height: 100%;
+    width: 50%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.form-container {
+    height:100%;
+    margin-left: 10%;
+}
+
+.form-group{
+    height: 100%;
+}
+
+.markdown-text-area {
+    height: 90%;
+}
+
+.markdown-preview {
+    margin-left: 5%;
+    text-align: left;
 }
